Closed Bug 161268 Opened 22 years ago Closed 22 years ago

[FIX]Content-Style-Type ignored in various situations.

Categories

(Core :: CSS Parsing and Computation, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla1.2alpha

People

(Reporter: jim, Assigned: bzbarsky)

References

()

Details

Attachments

(1 file)

Using 
<meta http-equiv="Content-Style-Type" content="text/x-jl-css" />
to set the style language to my style language, Mozilla correctly ignores it if 
the document is html served as text/html, if it's xml served as text/xml with 
meta and b elements from the xhtml namespace, it incorrectly applies the styles 
as if they were text/css (see the URL).

Equally having a Content-Style-Type HTTP header itself is completely ignored 
everywhere it seems to me.

http://www.w3.org/TR/REC-html40/present/styles.html  for the relevant bit of 
the standard.
Jim, any chance of a testcase that uses HTTP headers so I can test that part of
the patch?
Assignee: dbaron → bzbarsky
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows 98 → All
Priority: -- → P2
Hardware: PC → All
Summary: Content-Style-Type ignored in various situations. → [FIX]Content-Style-Type ignored in various situations.
Target Milestone: --- → mozilla1.2alpha
Couple more test-cases:

XHTML 1.0 served as text/xml with content-style-type header:

http://jibbering.com/2002/8/test.2.1

HTML 4.01 served as text/html with content-style-type header:

http://jibbering.com/2002/8/test.1

Perfect. Patch fixes both, by the way.  ;)
Great, so that's 43 minutes from report to fix... I guess that's reasonable :-)
Comment on attachment 94160 [details] [diff] [review]
This should fix <meta> for XML and actual header for XML and HTML

r=peterv.
Attachment #94160 - Flags: review+
I thought the HTTP header part of the bug was a duplicate of a very old bug Ian
filed, but I can't seem to find it.  I suspect Ian has some testcases in
http://www.bath.ac.uk/~py8ieh/internet/importtest/
Comment on attachment 94160 [details] [diff] [review]
This should fix <meta> for XML and actual header for XML and HTML

sr=dbaron
Attachment #94160 - Flags: superreview+
Another Test case from hixie:

http://www.bath.ac.uk/~py8ieh/internet/importtest/extra/defaultlanguage.http.htm
l

(this one nicely telling you what it should look like etc...)
Excellent.  Passes that too.  ;)

Fix checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
verified 
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: