respect content-style-type HTTP header and support the <meta> tag in XML.  Bug 161268, r=peterv, sr=dbaron.